# CAS_vulpes

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  backup.sh  build.sh  cmake_install.cmake  solve.cpp
include/: bignum.hpp  expression.hpp  functions.hpp  misc.hpp
source/: CMakeLists.txt  Makefile  bignum.cpp  cmake_install.cmake  expression.cpp  functions.cpp
